--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Device type. Can be BME280, SenseHat, Mock
+# Device type. Can be BME280, SenseHat, DS18B20, Mock
 DEVICE=Mock
 
 # How to write. Can be CONSOLE or POST
