Add password and location to settings

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,6 @@ WRITER=CONSOLE
 # Remote URL for POST
 API_URL=""
 
-# The name under which this device appears in the API.
 NAME=device1
+PASSWORD=Password123*
+LOCATION=lcoation1
