Add wiki as the base url
This is to demonstrate that the URL is without the actual endpoint.
Just the base to the API.

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DEVICE=Mock
 WRITER=CONSOLE
 
 # Remote URL for POST
-API_URL=""
+API_URL="https://wiki.clau.space/api/"
 
 NAME=device1
 PASSWORD=Password123*
