--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ ignore_missing_imports = True
 max-line-length = 120
 exclude =
     migrations,
-    tracker/settings.py,
+    src/settings.py,
     manage.py,
     env,
 
