Add login and device id
This is due to the updated API.

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,7 @@ DEVICE=Mock
 # How to write. Can be CONSOLE or POST
 WRITER=CONSOLE
 
-# Remote URL for POST
-API_URL="https://wiki.clau.space/api/"
-
+BASE_URL="https://wiki.clau.space/"
 NAME=device1
 PASSWORD=Password123*
 LOCATION=lcoation1
