--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-# static analysis
-black==18.9b0
-flake8==3.7.7
-isort==4.3.4
-pylint==2.3.1
-
-# actual stuff
 requests==2.21.0
 python-dotenv==0.10.1
+beautifulsoup4==4.7.1
